--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,8 @@ body {
   border-radius: 8px;
   border: 1px solid #ffffff;
 }
+
+.data-grid-header {
+  background-color: #e6f7ff;
+  text-transform: capitalize;
+}
